<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profilePicDescription"
        android:layout_marginTop="20dp"
        android:background="@drawable/image_border_circle"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:text="@string/userName"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="185dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="200dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/distance_travelled_logo"
            android:background="@drawable/ic_directions_walk_black_24dp"
            android:backgroundTint="@color/background"
            android:id="@+id/total_step_count_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/background"
            app:layout_constraintTop_toBottomOf="@id/total_step_count_logo"
            app:layout_constraintEnd_toStartOf="@id/total_distance_travelled"
            android:text="@string/stepsCount"
            android:id="@+id/step_count"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/total_step_count_logo"
            app:layout_constraintEnd_toStartOf="@id/calories_burned_logo"
            android:background="@drawable/ic_gesture_black_24dp"
            android:backgroundTint="@color/background"
            android:id="@+id/distance_travelled_logo"/>

        <TextView
            android:id="@+id/total_distance_travelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/distanceTravelled"
            android:textColor="@color/background"
            app:layout_constraintEnd_toStartOf="@id/total_calories_burned"
            app:layout_constraintStart_toEndOf="@id/step_count"
            app:layout_constraintTop_toBottomOf="@id/distance_travelled_logo" />

        <ImageView
            android:id="@+id/calories_burned_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/ic_whatshot_black_24dp"
            android:backgroundTint="@color/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/distance_travelled_logo" />

        <TextView
            android:id="@+id/total_calories_burned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/caloriesBurned"
            android:textColor="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/total_distance_travelled"
            app:layout_constraintTop_toBottomOf="@id/calories_burned_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:background="@drawable/rounded_corner"
            android:paddingTop="10dp"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="200dp"
            app:behavior_skipCollapsed = "true"

            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal">

                <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:tabSelectedTextColor="@color/colorPrimary"
                        app:tabBackground="@drawable/rounded_corner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/background"
                        app:tabTextColor="@color/cardview_dark_background"
                        android:theme="@style/AppTheme.AppBarOverlay"/>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>